<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/ic_matched_jobs"
        android:title="@string/nav_matched_jobs" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_status"
        android:icon="@drawable/ic_status"
        android:title="@string/nav_status" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />



</menu>
