<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/wallpaper1">

    <!-- Registration Illustration -->
    <ImageView
        android:id="@+id/imgRegistration"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/registration_image"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_description_registration_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/enter_full_name"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/imgRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/enter_email"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@id/etFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:autofillHints="newPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:autofillHints="newPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/register"
        android:backgroundTint="#3F51B5"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Sign In Link -->
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#155FA0"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
