<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@drawable/wallpaper1">

    <!-- Sign-in Illustration -->
    <ImageView
        android:id="@+id/imgSignIn"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/signin_image"
        android:scaleType="fitCenter"
        android:contentDescription="@string/sign_in_image_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etSignInEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/Enter_email"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/text_color_primary"
        android:textColorHint="@color/hint_color"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@id/imgSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etSignInPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/Enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/etSignInEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Sign-in Button -->
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/Sign_in"
        android:backgroundTint="#3F51B5"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/etSignInPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp" />

    <!-- Sign up Link -->
    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up_text"
        android:textColor="#155FA0"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
